      servers.  This will stop Tor versions 0.1.0.x and earlier from working,
      but (for security reasons) nobody should be running those versions
      anyway.

  o Major bugfixes (compilation):
    - Try to fix win32 compilation again: Improve checking for ipv6 types.
    - Fix compile on platforms without getaddrinfo: bug found by Li-Hui
      Zhou.

  o Minor features (directory voting):
    - Store v3 consensus status consensuses on disk, and reload them
      on startup.

  o Minor features (security):
    - Warn about unsafe ControlPort configurations.

  o Minor bugfixes (directory voting):
    - Read v3 keys from the right location.


Changes in version 0.2.0.4-alpha - 2007-08-01
  o Major security fixes:
    - Close immediately after missing authentication on control port;
      do not allow multiple authentication attempts.

  o Major bugfixes (compilation):
    - Fix win32 compilation: apparently IN_ADDR and IN6_ADDR are already
      defined there.

  o Minor features (performance):
    - Be even more aggressive about releasing RAM from small
      empty buffers. Thanks to our free-list code, this shouldn't be too
      performance-intensive.
    - Disable sentinel-based debugging for buffer code: we squashed all
      the bugs that this was supposed to detect a long time ago, and
      now its only effect is to change our buffer sizes from nice
      powers of two (which platform mallocs tend to like) to values
      siightly over powers of two (which make some platform mallocs sad).
    - Log malloc statistics from mallinfo() on platforms where it
      exists.


Changes in version 0.2.0.3-alpha - 2007-07-29
  o Major features:
    - The first pieces of our "bridge" design for blocking-resistance
      are implemented. People can run bridge directory authorities;
      people can run bridges; and people can configure their Tor clients
      with a set of bridges to use as the first hop into the Tor network.